--- a/source/form.html
+++ b/source/form.html
@@ -11,16 +11,16 @@
   <body class="form-page">
     <div class="container">
       <header>
-        <nav class="site-nav  site-nav--open">
+        <nav class="site-nav  site-nav--opened  site-nav--nojs">
           <ul class="site-nav__list">
             <li class="site-nav__item"><a href="index.html">Главная</a></li>
-            <li class="site-nav__item"><a>Фото и видео</a></li>
+            <li class="site-nav__item"><a href="photo.html">Фото и видео</a></li>
             <li class="site-nav__item  site-nav__item--site-logo">
               <a href="index.html">
                 <img src="./img/logo-sedona-mobile.svg" alt="City of SEDONA (LOGO)">
               </a>
             </li>
-            <li class="site-nav__item"><a href="form.html">Форма Отзыва</a></li>
+            <li class="site-nav__item"><a>Форма Отзыва</a></li>
             <li class="site-nav__item"><a href="https://htmlacademy.ru/" target="_blank">HTML Academy</a></li>
           </ul>
 
@@ -50,8 +50,8 @@
         </div>
 
         <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
-          <fieldset class="feedback-form__fieldset  feedback-form__fieldset--name">
-            <legend class="feedback-form__fieldset-title"><span>Представьтесь:</span></legend>
+          <div class="feedback-form__fieldset  feedback-form__fieldset--name">
+            <div class="feedback-form__fieldset-title"><span>Представьтесь:</span></div>
 
             <div class="text-input">
               <label for="feedback-form__first-name">
@@ -74,10 +74,10 @@
               <input type="text" name="middle_name" value="" placeholder="Александрович"
                 id="feedback-form__middle-name"/>
             </div>
-          </fieldset>
+          </div>
 
-          <fieldset class="feedback-form__fieldset  feedback-form__fieldset--contacts">
-            <legend class="feedback-form__fieldset-title"><span>Контактная информация:</span></legend>
+          <div class="feedback-form__fieldset  feedback-form__fieldset--contacts">
+            <div class="feedback-form__fieldset-title"><span>Контактная информация:</span></div>
 
             <div class="text-input  text-input--phone">
               <label for="feedback-form__phone">
@@ -94,77 +94,77 @@
               <input type="email" name="email" value="" placeholder="Введите e-mail" required
                 id="feedback-form__email"/>
             </div>
-          </fieldset>
+          </div>
 
-          <fieldset class="feedback-form__fieldset  feedback-form__fieldset--rating">
-            <legend class="feedback-form__fieldset-title"><span>Ваше Общее впечатление:</span></legend>
+          <div class="feedback-form__fieldset  feedback-form__fieldset--rating">
+            <div class="feedback-form__fieldset-title"><span>Ваше Общее впечатление:</span></div>
 
             <div class="radio-input-list">
-              <div class="radio-input">
+              <div class="radio-input  radio-input-list__item">
                 <input type="radio" name="score" value="1" checked
                   id="feedback-form__score-1">
                 <label for="feedback-form__score-1">Скорее положительное</label>
               </div>
 
-              <div class="radio-input">
+              <div class="radio-input  radio-input-list__item">
                 <input type="radio" name="score" value="2"
                   id="feedback-form__score-2">
                 <label for="feedback-form__score-2">Скорее отрицательное</label>
               </div>
 
-              <div class="radio-input">
+              <div class="radio-input  radio-input-list__item">
                 <input type="radio" name="score" value="3"
                   id="feedback-form__score-3">
                 <label for="feedback-form__score-3">Затрудняюсь ответить</label>
               </div>
             </div>
-          </fieldset>
+          </div>
 
-          <fieldset class="feedback-form__fieldset  feedback-form__fieldset--places">
-            <legend class="feedback-form__fieldset-title"><span>Посещенные достопримечательности:</span></legend>
+          <div class="feedback-form__fieldset  feedback-form__fieldset--places">
+            <div class="feedback-form__fieldset-title"><span>Посещенные достопримечательности:</span></div>
 
             <div class="checkbox-input-list">
-              <div class="checkbox-input">
+              <div class="checkbox-input  checkbox-input-list__item">
                 <input type="checkbox" name="place" value="1" checked
                   id="feedback-form__place-1">
                 <label for="feedback-form__place-1">Мост Дьявола</label>
               </div>
 
-              <div class="checkbox-input">
+              <div class="checkbox-input  checkbox-input-list__item">
                 <input type="checkbox" name="place" value="2" checked
                   id="feedback-form__place-2">
                 <label for="feedback-form__place-2">Гора-Колокол</label>
               </div>
 
-              <div class="checkbox-input">
+              <div class="checkbox-input  checkbox-input-list__item">
                 <input type="checkbox" name="place" value="3" checked
                   id="feedback-form__place-3">
                 <label for="feedback-form__place-3">Слайд-парк</label>
               </div>
 
-              <div class="checkbox-input">
+              <div class="checkbox-input  checkbox-input-list__item">
                 <input type="checkbox" name="place" value="4"
                   id="feedback-form__place-4">
                 <label for="feedback-form__place-4">Красные скалы</label>
               </div>
             </div>
-          </fieldset>
+          </div>
 
-          <fieldset class="feedback-form__fieldset  feedback-form__fieldset--review">
-            <legend class="feedback-form__fieldset-title"><span>Опишите свои эмоции:</span></legend>
+          <div class="feedback-form__fieldset  feedback-form__fieldset--review">
+            <div class="feedback-form__fieldset-title"><span>Опишите свои эмоции:</span></div>
 
             <label class="visually-hidden" for="feedback-form__review">Отзыв</label>
             <textarea class="feedback-form__review" name="review"
               id="feedback-form__review">Опишите подробно все свои восторги</textarea>
-          </fieldset>
+          </div>
 
-          <fieldset class="feedback-form__fieldset  feedback-form__fieldset--submit">
+          <div class="feedback-form__fieldset  feedback-form__fieldset--submit">
             <button class="button  feedback-form__submit-button" type="submit">Отправить отзыв</button>
 
             <div class="feedback-form__required-field-help">
               * — обязательные поля
             </div>
-          </fieldset>
+          </div>
         </form>
       </main>
 
@@ -193,5 +193,7 @@
         </div>
       </footer>
     </div>
+
+    <script src="js/app.js"></script>
   </body>
 </html>
