--- a/source/photo.html
+++ b/source/photo.html
@@ -11,7 +11,7 @@
   <body class="photo-page">
     <div class="container">
       <header>
-        <nav class="site-nav  site-nav--open">
+        <nav class="site-nav  site-nav--opened  site-nav--nojs">
           <ul class="site-nav__list">
             <li class="site-nav__item"><a href="index.html">Главная</a></li>
             <li class="site-nav__item"><a>Фото и видео</a></li>
@@ -163,5 +163,7 @@
         </div>
       </footer>
     </div>
+
+    <script src="js/app.js"></script>
   </body>
 </html>
