--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,12 @@
     <meta name="keywords" content="TODO seo">
     <meta name="description" content="TODO seo">
     <link rel="stylesheet" href="css/style.css">
+
+    <script>
+      // Picture element HTML5 shiv
+      document.createElement('picture');
+    </script>
+    <script src="js/picturefill.min.js" async></script>
   </head>
   <body class="index-page">
     <div class="container">
@@ -17,7 +23,13 @@
             <li class="site-nav__item"><a href="photo.html">Фото и видео</a></li>
             <li class="site-nav__item  site-nav__item--site-logo">
               <a>
-                <img src="./img/logo-sedona-mobile.svg" alt="City of SEDONA (LOGO)">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="./img/logo-sedona-desktop.svg">
+                  <source media="(min-width: 768px)" srcset="./img/logo-sedona-tablet.svg">
+                  <img src="./img/logo-sedona-mobile.svg"
+                    width="102"
+                    alt="City of SEDONA (LOGO)">
+                </picture>
               </a>
             </li>
             <li class="site-nav__item"><a href="form.html">Форма Отзыва</a></li>
@@ -45,7 +57,7 @@
       <main>
         <section class="index-page-intro">
           <h1 class="index-page-intro__title">
-            СЕДОНА — небольшой городок в&nbsp;Аризоне, заслуживающий большего!
+            СЕДОНА &ndash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!
           </h1>
 
           <p class="index-page-intro__desc">
@@ -53,11 +65,13 @@
           </p>
         </section>
 
+        <div class="decorative-triangle"></div>
+
         <section class="advantage-with-photo    advantage-with-photo--first">
           <div class="advantage  advantage--primary  advantage-with-photo__advantage">
             <h2 class="advantage__title">Настоящий <br class="mobile-hidden">городок</h2>
 
-            <span class="advantage__number">№1</span>
+            <span class="advantage__number">– №1 –</span>
 
             <p class="advantage__desc">
               Седона не аттракцион для туристов, <br class="only-desktop">там течет своя жизнь
@@ -65,8 +79,15 @@
           </div>
 
           <div class="advantage-with-photo__photo">
-            <img src="./img/main-city-mobile@1x.jpg"
-              alt="На фото изображен сельский городок во все его сельском великолемии...">
+            <picture>
+              <source media="(min-width: 1200px)"
+                srcset="./img/main-city-desktop@1x.jpg 1x, ./img/main-city-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)"
+                srcset="./img/main-city-tablet@1x.jpg 1x, ./img/main-city-tablet@2x.jpg 2x">
+              <img src="./img/main-city-mobile@1x.jpg"
+                srcset="./img/main-city-mobile@2x.jpg 2x"
+                alt="На фото изображен сельский городок во все его сельском великолемии...">
+            </picture>
           </div>
         </section>
 
@@ -101,7 +122,7 @@
           <div class="advantage  advantage--primary  advantage-with-photo__advantage">
             <h2 class="advantage__title">Там есть <br class="mobile-hidden">мост дьявола</h2>
 
-            <span class="advantage__number">№2</span>
+            <span class="advantage__number">– №2 –</span>
 
             <p class="advantage__desc">
               Да, по нему можно пройти! <br class="only-desktop">Если вы осмелитесь, конечно
@@ -109,8 +130,15 @@
           </div>
 
           <div class="advantage-with-photo__photo">
-            <img src="./img/photo-bridge-mobile@1x.jpg"
-              alt="Скала каменный мост. Силами природы возведенный каменный мост над бездонной пропастью">
+            <picture>
+              <source media="(min-width: 1200px)"
+                srcset="./img/main-bridge-desktop@1x.jpg 1x, ./img/main-bridge-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)"
+                srcset="./img/main-bridge-tablet@1x.jpg 1x, ./img/main-bridge-tablet@2x.jpg 2x">
+              <img src="./img/main-bridge-mobile@1x.jpg"
+                srcset="./img/main-bridge-mobile@2x.jpg 2x"
+                alt="Скала каменный мост. Силами природы возведенный каменный мост над бездонной пропастью">
+            </picture>
           </div>
         </div>
 
@@ -118,7 +146,7 @@
           <section class="advantage  advantage-list__item">
             <h2 class="advantage__title">Небольшая <br class="mobile-hidden">площадь</h2>
 
-            <span class="advantage__number">№3</span>
+            <span class="advantage__number">– №3 –</span>
 
             <p class="advantage__desc">
               Все интересные места находятся очень близко
@@ -128,17 +156,19 @@
           <section class="advantage  advantage-list__item">
             <h2 class="advantage__title">Красивая <br class="mobile-hidden">дорога</h2>
 
-            <span class="advantage__number">№4</span>
+            <span class="advantage__number">– №4 –</span>
 
             <p class="advantage__desc">
-              Ехать в&nbsp;седону из <nobr>Лас-Вегаса</nobr> <br class="only-mobile">совсем НЕ&nbsp;СКУЧНО!
+              Ехать в&nbsp;седону из
+              <nobr>Лас-Вегаса</nobr>
+              <br class="only-mobile">совсем НЕ&nbsp;СКУЧНО!
             </p>
           </section>
 
           <section class="advantage  advantage-list__item">
             <h2 class="advantage__title">Мало <br class="mobile-hidden">туристов</h2>
 
-            <span class="advantage__number">№5</span>
+            <span class="advantage__number">– №5 –</span>
 
             <p class="advantage__desc">
               Большинство едет в гранд каньон <br class="only-mobile">и толпится там
@@ -161,7 +191,7 @@
           <a class="find-apartment-suggestion__link  button" href="#">Найти гостиницу</a>
         </section>
 
-        <!-- TODO не удалось с первого раза нормально указать координаты и масштаб, возможно стоит попытаться ещё раз -->
+        <!-- TODO не удалось нормально указать координаты и масштаб -->
         <iframe class="sedona-map"
           src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15621.264151255386!2d-111.65426469307185!3d35.19798644927836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1574486802965!5m2!1sru!2sru"
           allowfullscreen=""></iframe>
@@ -175,20 +205,54 @@
         <div class="page-footer__social-link">
           <ul class="social-links">
             <li class="social-links__item  social-links__item--twitter">
-              <a href="https://twitter.com/hashtag/sedona" target="_blank">Twitter</a>
+              <a href="https://twitter.com/hashtag/sedona" target="_blank">
+                <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px"
+                  viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M11.283,0.153c1.736-0.484,3.074,0.264,3.685,1.15 c0.694-0.225,1.372-0.47,2.072-0.69c-0.004,0.841-0.538,1.478-0.883,1.728C16.861,2.506,17.5,1.86,17.5,1.86 c-0.175,0.977-1.035,1.746-1.611,1.977C15.65,10.429,12.617,14.793,5.507,14.66c-0.538,0,0.077,0-0.46,0 c-0.422,0-4.29-0.45-5.047-1.843c2.341,0.192,4.011-0.412,4.835-1.15c-0.989-0.293-2.761-0.464-3.07-2.881 c0.362,0.105,0.583,0.223,1.228,0.117C1.757,8.067,0.385,7.366,0.461,5.218c0.294,0.319,1.1,0.523,1.381,0.461 c-0.725-0.235-2.03-3.281-0.921-4.836C2.794,2.655,4.769,4.364,8.29,4.528C8.506,2.288,9.461,0.788,11.283,0.153z"/>
+                </svg>
+
+                <span class="visually-hidden">Twitter</span>
+              </a>
             </li>
             <li class="social-links__item  social-links__item--facebook">
-              <a href="https://www.facebook.com/VisitSedona/" target="_blank">Facebook</a>
+              <a href="https://www.facebook.com/VisitSedona/" target="_blank">
+                <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="8.672px" height="18.944px"
+                  viewBox="0 0 8.672 18.944" enable-background="new 0 0 8.672 18.944" xml:space="preserve">
+                  <path
+                    d="M6.275,3.356c0.799,0,1.599,0,2.398,0c0-1.119,0-2.237,0-3.356c-0.959,0-1.92,0-2.878,0C2.656,0.181,1.54,2.387,1.948,6.114 H0v3.518h1.959c0,3.104,0,6.208,0,9.312c1.279,0,2.559,0,3.837,0c0-3.104,0-6.208,0-9.312h2.857V6.114H5.787 C5.765,5.069,5.75,3.709,6.275,3.356z"/>
+                </svg>
+
+                <span class="visually-hidden">Facebook</span>
+              </a>
             </li>
             <li class="social-links__item  social-links__item--youtube">
-              <a href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank">Youtube</a>
+              <a href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank">
+                <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.979px" height="14.015px"
+                  viewBox="0 0 19.979 14.015" enable-background="new 0 0 19.979 14.015" xml:space="preserve">
+                  <path
+                    d="M17.145,0H2.835C1.275,0,0,1.275,0,2.835v8.345c0,1.56,1.275,2.835,2.835,2.835h14.31c1.56,0,2.835-1.275,2.835-2.835V2.835 C19.979,1.275,18.704,0,17.145,0z M7.036,10.392V3.623l6.769,3.384L7.036,10.392z"/>
+                </svg>
+                <span class="visually-hidden">Youtube</span></a>
             </li>
           </ul>
         </div>
 
         <div class="page-footer__credits">
           <span class="page-footer__credits-text">Разработано</span>
-          <a class="page-footer__credits-link  htmlacademy-logo" href="https://htmlacademy.ru/intensive/adaptive">HtmlAcademy</a>
+          <a class="page-footer__credits-link  htmlacademy-logo" href="https://htmlacademy.ru/intensive/adaptive">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px"
+              viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+              <path
+                d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
+            </svg>
+
+            <span class="visually-hidden">HtmlAcademy</span>
+          </a>
         </div>
       </footer>
     </div>
