--- a/source/form.html
+++ b/source/form.html
@@ -95,7 +95,8 @@
           </div>
 
           <div class="feedback-form__fieldset  feedback-form__fieldset--contacts">
-            <div class="feedback-form__fieldset-title  feedback-form__fieldset-title--decorated"><span>Контактная информация:</span></div>
+            <div class="feedback-form__fieldset-title  feedback-form__fieldset-title--decorated"><span>Контактная информация:</span>
+            </div>
 
             <div class="text-input  text-input--phone  text-input--with-icon">
               <label for="feedback-form__phone">
@@ -171,7 +172,8 @@
           </div>
 
           <div class="feedback-form__fieldset  feedback-form__fieldset--review">
-            <div class="feedback-form__fieldset-title  feedback-form__fieldset-title--decorated"><span>Опишите свои эмоции:</span></div>
+            <div class="feedback-form__fieldset-title  feedback-form__fieldset-title--decorated"><span>Опишите свои эмоции:</span>
+            </div>
 
             <label class="visually-hidden" for="feedback-form__review">Отзыв</label>
             <textarea class="feedback-form__review" name="review" placeholder="Опишите подробно все свои восторги"
@@ -233,6 +235,36 @@
           </a>
         </div>
       </footer>
+    </div>
+
+    <div class="modal  js-modal-error">
+      <div class="modal__inner">
+        <div class="modal__header">ЧТО-ТО ПОШЛО НЕ ТАК!</div>
+
+        <div class="modal__body">
+          Проверьте поля, выделенные красным,
+          скорее всего вы забыли их заполнить
+
+          <div class="modal__button-wrapper">
+            <button class="button  modal__button  modal__button--small  js-modal-close" type="button">ОК</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal  js-modal-success">
+      <div class="modal__inner">
+        <div class="modal__header">Ваш отзыв отправлен!</div>
+
+        <div class="modal__body">
+          Спасибо за ваше участие, ваш отзыв уже поступил к нам.
+          В&nbsp;ближайшее время мы опубликуем его на сайте.
+        </div>
+
+        <div class="modal__footer">
+          <button class="button  modal__button  modal__button--big  js-modal-close" type="button">Закрыть окно</button>
+        </div>
+      </div>
     </div>
 
     <script src="js/app.js"></script>
